# terrain-image-generator

backend/: .gitignore  Cargo.toml  package-lock.json  package.json
backend/generated-images/: db4de84b-e70d-4d7c-82c3-d6996ebd9daf-shaded.tif
backend/src/: lib.rs  main.rs
backend/xml-file/: elevation.xml
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js  MapComponent.js  index.css
